[gd_scene load_steps=8 format=2]

[ext_resource path="res://core/Game.gd" type="Script" id=1]
[ext_resource path="res://level/levels/adventurers_guild/AdventurersGuild.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/audio/music/MusicPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/pause_menu/PauseMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://core/LevelLoader.gd" type="Script" id=5]
[ext_resource path="res://items/Inventory.tscn" type="PackedScene" id=7]
[ext_resource path="res://core/camera/Camera2D.tscn" type="PackedScene" id=8]

[node name="Game" type="Node"]
script = ExtResource( 1 )
LEVEL_START = ExtResource( 2 )

[node name="MusicPlayer" parent="." instance=ExtResource( 3 )]
pause_mode = 2

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="Skybox" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interface" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="Interface" instance=ExtResource( 4 )]

[node name="Inventory" parent="Interface" instance=ExtResource( 7 )]

[node name="LevelLoader" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Camera2D" parent="." instance=ExtResource( 8 )]
[connection signal="loaded" from="LevelLoader" to="." method="level_loaded"]
